--- a/pensionelucrezia/index.html
+++ b/pensionelucrezia/index.html
@@ -4,7 +4,7 @@
         <title>Regala un frullatore a Pensione Lucrezia!</title>
         
         <style type="text/css">
-body             { padding-left:40px; font-family:arial;}
+body             { padding:40px; font-family:arial;}
 input, textarea  { font-family: courier new; font-size: 12px; }
 #content         { width:800px; text-align:left; margin-left:60px; }
 
