--- a/watermarker/index.html
+++ b/watermarker/index.html
@@ -150,6 +150,20 @@ var allFiles = 0;
   <a href="/" style="text-decoration: none;">
   <h2>JS Watermark Tool</h2></a>
  </header>
+ 
+ <div id="ads" style="float:right;width:310px;height:280px;margin-right:30px;">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ijf15 box -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-3112565434711919"
+     data-ad-slot="4349290906"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  </div>
+ 
+ 
   <br>
   <div id="main">
   <form id="form1" enctype="multipart/form-data" method="post" onsubmit="doUpload();return false;">
