--- a/watermarker/index.html
+++ b/watermarker/index.html
@@ -14,7 +14,7 @@
 
 function logging(message) {
     var img = document.createElement("img");
-    img.src="http://dev.andreafortuna.org/api/dumblog/log.php?message=" + "(IJF17Watermark) " + message;
+    img.src="http://dev.andreafortuna.org/api/dumblog/log.php?message=" + "(JSWatermark) " + message;
     
 }
 
