--- a/pensionelucrezia/index.html
+++ b/pensionelucrezia/index.html
@@ -18,7 +18,7 @@ input, textarea  { font-family: courier new; font-size: 12px; }
         <img src="https://images-na.ssl-images-amazon.com/images/I/41-Zerfa1cL._SX425_.jpg" width=500px />
         <h3>Come già sapete, il 3 settembre Alessia festeggia il suo genetliaco numero 37.</h3>
         <p>Come di consuetudine ho avviato la raccola fondi online: anche quest'anno lo scopo e' di appoggiare e incoraggiare la sua passione per la cucina (a vantaggio di tutti) e regalarle un utensile che brama da mesi.</p>
-        <p>Maggiori infor <a href="https://www.amazon.it/dp/B00QIGQ8O2/ref=wl_it_dp_o_pC_nS_ttl?_encoding=UTF8&colid=1YSSCNMPOYD7I&coliid=I28HCNTQYO6MS9">QUI</a></p>
+        <p>Maggiori info <a href="https://www.amazon.it/dp/B00QIGQ8O2/ref=wl_it_dp_o_pC_nS_ttl?_encoding=UTF8&colid=1YSSCNMPOYD7I&coliid=I28HCNTQYO6MS9">QUI</a></p>
         
         <h2>Come partecipare?</h2>
         
