--- a/orgchart/index.html
+++ b/orgchart/index.html
@@ -315,6 +315,7 @@ ul a span{
 .department.dep-d a{ background: #A3A2A2; }
 .department.dep-e a{ background: #f0f0f0; }
 .department.dep-f a{ background: #f0f0f0; }
+#FIRSTDEP:before {border-left:0px}
 </style>
 </head>
 <body>
@@ -333,7 +334,7 @@ ul a span{
 
 
               
-              <li class="department dep-a" style="before::border-left:0px">
+              <li id="FIRSTDEP" class="department dep-a">
                 <a href="#"><span>Finance and accounting</span></a>
                 <ul class="sections">
                   <li class="section"><a href="#"><span>Simona Della Vecchia<br><i>Finance</i></span></a></li>
