--- a/orgchart/index.html
+++ b/orgchart/index.html
@@ -36,7 +36,7 @@ body{
 
 .content{
 	width: 100%;
-	max-width: 1142px;
+	/*max-width: 1142px;*/
 	margin: 0 auto;
 	padding: 0 20px;
 }
@@ -226,7 +226,7 @@ ul a span{
 
 .department{
 	border-left: 4px solid #fff;
-	width: 15%;
+	width: 12%;
 	float: left;
 	margin-left: 1.751313485113835%;
 	margin-bottom: 60px;
@@ -313,8 +313,9 @@ ul a span{
 .department.dep-b a{ background: #AAD4E7; }
 .department.dep-c a{ background: #FDB0FD; }
 .department.dep-d a{ background: #A3A2A2; }
-.department.dep-e a{ background: #f0f0f0; }
-.department.dep-f a{ background: #f0f0f0; }
+.department.dep-e a{ background: #cb8acf; }
+.department.dep-f a{ background: #e7e552; }
+.department.dep-g a{ background: #f0f0f0; }
 #FIRSTDEP:before {border-left:0px}
 </style>
 </head>
@@ -325,11 +326,11 @@ ul a span{
       <li>					
         <ul class="director">
           <li>
-            <a href="#"><span>Marie Terese Mukamitsindo<br><i>Chairman Founder</i><br><br><i>P.A.: Marina Vittori</i></span></a>
+            <a href="#" style="width:33%;left:-48px;background-color: #35da35;"><span>Marie Terese Mukamitsindo<br><i>Chairman Founder</i></span></a>
             <ul class="subdirector">             
             </ul>
             <ul class="departments cf">								
-              <li><a href="#"><span>Liliane Murekatete<br><i>CEO</i><br><br><i>P.A.: Chiara Restaini</i></span></a></li>
+              <li style="border-bottom: 0px;"><a href="#" style="right: -28px;width: 181%;background-color: #21e9e9;"><span>Liliane Murekatete<br><i>CEO</i><br><br><i>P.A.: Chiara Restaini</i></span></a></li>
 
 
 
@@ -360,19 +361,27 @@ ul a span{
 
               <li class="department dep-e">
                 <a href="#"><span>Lisa Coletto<br><i>Legal</i></span></a>
-                <ul class="sections">
+                <!-- <ul class="sections">
                   <li class="section"><a href="#"><span>Cedric Joel Kamjou Tatou</span></a></li>
                   <li class="section"><a href="#"><span>Giulie</span></a></li>
                   <li class="section"><a href="#"><span>Claudia</span></a></li>
-                </ul>
+                </ul>-->
               </li>
 
               <li class="department dep-f">
                 <a href="#"><span>Lilia Mauriello<br><i>Operations</i></span></a>
                 <ul class="sections">
+				  <li class="section"><a href="#"><span><i>Prefettura</i></span></a></li>
                   <li class="section"><a href="#"><span><i>SPRAR</i></span></a></li>
-                  <li class="section"><a href="#"><span>Alexandra Maudit<br><i>"Vittime di tratta"</i></span></a></li>
-                  <li class="section"><a href="#"><span>Giusy Pantaneschi<br><i>"Minori"</i></span></a></li>
+                  <li class="section"><a href="#"><span>Giusy Pantaneschi<br><i>Minori SNA</i></span></a></li>
+                  <li class="section"><a href="#"><span>Alexandra Maudit<br><i>Vittime di tratta</i></span></a></li>
+                </ul>
+              </li>
+
+              <li class="department dep-g">
+                <a href="#"><span>Sandro Roccia<br><i>Research and Development</i></span></a>
+                <ul class="sections">
+				  <li class="section"><a href="#"><span>Vana Pikiou</span><br><i>Educational</i></span></a></li>                 
                 </ul>
               </li>
 
