--- a/orgchart/index.html
+++ b/orgchart/index.html
@@ -326,11 +326,11 @@ ul a span{
       <li>					
         <ul class="director">
           <li>
-            <a href="#" style="width:33%;left:-48px;background-color: #35da35;"><span>Marie Terese Mukamitsindo<br><i>Chairman Founder</i></span></a>
+            <a href="#" style="width:33%;left:-48px;background-color: #35da35;min-width: 250px;"><span>Marie Terese Mukamitsindo<br><i>Chairman Founder</i></span></a>
             <ul class="subdirector">             
             </ul>
             <ul class="departments cf">								
-              <li style="border-bottom: 0px;"><a href="#" style="right: -28px;width: 181%;background-color: #21e9e9;"><span>Liliane Murekatete<br><i>CEO</i><br><br><i>P.A.: Chiara Restaini</i></span></a></li>
+              <li style="border-bottom: 0px;"><a href="#" style="right: -28px;width: 181%;background-color: #21e9e9;min-width: 250px;"><span>Liliane Murekatete<br><i>CEO</i><br><br><i>P.A.: Chiara Restaini</i></span></a></li>
 
 
 
