--- a/orgchart/index.html
+++ b/orgchart/index.html
@@ -336,10 +336,9 @@ ul a span{
 
               
               <li id="FIRSTDEP" class="department dep-a">
-                <a href="#"><span>Finance and accounting</span></a>
+                <a href="#"><span>Simona Della Vecchia<br><i>Finance and accounting</i></span></a>
                 <ul class="sections">
-                  <li class="section"><a href="#"><span>Simona Della Vecchia<br><i>Finance</i></span></a></li>
-                  <li class="section"><a href="#"><span>Mirella Landi<br><i>Accounting</i></span></a></li>                
+                  <li class="section"><a href="#"><span>Mirella Landi<br><i>Bookeeper</i></span></a></li>                
                 </ul>
               </li>
               <li class="department dep-b">
@@ -350,11 +349,11 @@ ul a span{
                 <a href="#"><span>Lucrezia Alessia Ricciardi<br><i>Corporate Communication</i></span></a>              
               </li>
               <li class="department dep-d">
-                <a href="#"><span>Procurement, Purchaising and Logistic</span></a>
+                <a href="#"><span>Manuel Petracca<br><i style="font-size:0.8em;">Procurement, Purchasing, Warehouse, Logistic and Maintenance</i></span></a>
                 <ul class="sections">
-                  <li class="section"><a href="#"><span>Manuel Petracca<br><i>Purchaising</i></span></a></li>
-                  <li class="section"><a href="#"><span>Adriana Virgolino<br><i>Procurement</i></span></a></li>
-                  <li class="section"><a href="#"><span>Maria Cappa<br><i>Logistic</i></span></a></li>
+                  <li class="section"><a href="#"><span>Adriana Virgolino<br><i style="font-size:0.8em;">Procurement, Purchasing and Maintenance</i></span></a></li>
+                  <li class="section"><a href="#"><span>Maria Cappa<br><i>Warehouse</i></span></a></li>
+                  <li class="section"><a href="#"><span>Enrico Reginaldi<br><i>Logistic</i></span></a></li>
                 </ul>
               </li>
 
